Fixed footer spacing, temporarily removed e-pub from header, fixed SISR layout and spacing, and updated about page news.

--- a/css/about_style.css
+++ b/css/about_style.css
@@ -28,7 +28,6 @@ h1 {
 	font-family: "Gupter";
 	font-size: 1.5em;
 	background-color: white;
-	padding-bottom: 20%;
 }
 
 .content h1 {
@@ -40,22 +39,13 @@ h1 {
 	margin-top: auto;
 	padding-left: 2%;
 	padding-right: 2%;
-	height: 100%;
+	height: 80vh;
 	flex: 80%;
 }
 
 .blurb {
 	float: none;
 	padding: 0 5%;
-}
-
-.fa-quote-left {
-	float: left;
-}
-
-.fa-quote-right {
-	float: right;
-	margin-top: 1px;
 }
 
 .welcome h1 {
@@ -66,13 +56,13 @@ h1 {
 }
 
 .text {
-	margin-top: 2%;
 	display: block;
 	text-align: center;
 	float: left;
 	width: 100%;
 	padding-right: 20px;
 	padding-left: 20px;
+	font-size: 1.5em;
 }
 
 .text a {
@@ -133,13 +123,13 @@ h1 {
 /** Styling for the announcements section**/
 .news {
 	color: white;
-	margin: auto 2%;
 	padding-left: 2%;
 	padding-right: 2%;
 	padding-bottom: 2%;
 	background-color: #99914e;
-	height: 100%;
+	height: 50vh;
 	flex: 20%;
+	margin-right: 2vw;
 }
 
 .news h3 {
@@ -167,8 +157,8 @@ h1 {
 }
 
 .fpimg img {
-	width: 100%;
-	height: 80%;
+	width: 50vw;
+	height: 30vw;
 }
 
 h3 {
@@ -185,5 +175,6 @@ h3 {
 	.news {
 		margin-left: 3%;
 		margin-right: 3%;
+		height: 30vh;
 	}
 }
