--- a/css/publications_style.css
+++ b/css/publications_style.css
@@ -13,51 +13,6 @@ body {
 	background-color: #003a4e;
 	overflow-x: hidden;
 }
-.header {
-	background-color: #fff;
-	padding-top: 20px;
-	padding-bottom: 10px;
-	padding-left: 10px;
-	padding-right: 10px;
-}
-
-.header-right a {
-	float: left;
-	color: #222;
-	text-align: center;
-	padding: 12px;
-	text-decoration: none;
-	font-size: 18px;
-	line-height: 25px;
-	border-radius: 4px;
-	font-family: brandon-grotesque;
-	margin-top: 15px;
-}
-
-.logo {
-	margin-top: 0;
-	margin-left: 3%;
-	float: left;
-}
-
-.logo a img {
-	width: 5em;
-	height: auto;
-}
-
-.header-right a:hover {
-	background-color: #ddd;
-	color: black;
-}
-
-.header-right a.active {
-	background-color: #064e63;
-	color: white;
-}
-
-.header-right {
-	float: right;
-}
 
 .archive p {
 	padding: 10px;
@@ -120,82 +75,11 @@ body {
 	background-color: #ddd;
 }
 
-/** this media tag scales header for small screens**/
-@media screen and (max-width: 950px) {
-	.logo a img {
-		height: 4em;
-		width: auto;
-	}
-	.logo {
-		margin: 0;
-		width: 100%;
-		text-align: center;
-	}
-
-	.header-right a {
-		float: none;
-		display: block;
-		text-align: center;
-	}
-
-	.header-right {
-		margin-top: 5em;
-		float: none;
-	}
-}
-
 .content {
 	float: none;
 	font-family: brandon-grotesque;
 	background-color: white;
 	padding-bottom: 20%;
-}
-
-.footer {
-	padding: 10% 10px;
-	color: white;
-	text-align: center;
-}
-
-.stack {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-}
-
-.footer a {
-	color: white;
-	text-decoration: none;
-}
-
-.social {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-}
-
-.social i {
-	font-size: 3.5em;
-}
-
-.findivider {
-	margin: 5% 15%;
-	margin-bottom: 0%;
-}
-
-.credit {
-	display: flex;
-	justify-content: center;
-	margin-top: 30px;
-	padding-bottom: 30px;
-}
-
-#twitter {
-	margin-right: 3%;
-}
-
-#facebook {
-	margin-right: 3%;
 }
 
 .content {
@@ -228,6 +112,8 @@ body {
 	flex: 25%;
 	border-radius: 4px;
 	padding: 2%;
+	height: 50vw;
+	width: 30vw;
 }
 
 .sisr:hover {
@@ -236,10 +122,11 @@ body {
 
 .sisr h3 {
 	margin-bottom: 3%;
+	font-size: 2em;
 }
 
 .sisr img {
-	height: 70vh;
+	height: 40vw;
 	width: 100%;
 	object-fit: fill;
 }
@@ -247,7 +134,9 @@ body {
 p {
 	width: 70%;
 	margin: 0 auto;
+	margin-top: 2vh;
 	text-align: center;
+	font-size: 1.5em;
 }
 
 @media screen and (max-width: 800px) {
